01-APACHE-CFN-STATIC_WEB_SITE/Kittens-Carousel-Statik-Website-EC2.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
  This CloudFormation Template was written for running Kittens Carousel Static Website on EC2. Kittens Carousel Static Website will be deployed on Amazon Linux 2023 EC2 Instance with custom security group which allows http connections on port 80 and ssh port 22 from anywhere. Kittens Carousel Static Website is downloaded from my Public Github repository, then deployed on Apache Web Server.

Parameters:
  keyPair:
    Description: Choose your keypair
    Type: AWS::EC2::KeyPair::KeyName
    Default: firstkey

  instanceType:
    Description: Choose ypur instace type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t3.micro
      - t2.large

  LatestAmiId:
    Type: "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>"
    Default: "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"

Resources:
  myWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId

      InstanceType: !Ref instanceType

      KeyName: !Ref keyPair

      SecurityGroupIds:
        - !Ref mySecGrp # second way: !GetAtt mySecGrp.GroupId

      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}

      UserData: !Base64 |
        #! /bin/bash
        yum update -y
        yum install httpd -y
        FOLDER="https://raw.githubusercontent.com/AbdullahBozduman/AWS_PROJECTS/main/01-APACHE-CFN-STATIC_WEB_SITE"
        cd /var/www/html
        rm -f index.html
        wget ${FOLDER}/index.html
        wget ${FOLDER}/cat0.jpg
        wget ${FOLDER}/cat1.jpg
        wget ${FOLDER}/cat2.jpg
        systemctl start httpd
        systemctl enable httpd

  mySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: accessible via web browser from anywhere # Required
      GroupName: cloudformation-project-http-ssh-https

      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

Outputs:
  webSiteURL:
    Description: URL of website
    Value: !Sub
      - http://${PublicDNS}
      - PublicDNS: !GetAtt myWebServer.PublicDnsName
